NXP-16514: Java 8 is required
Remove occurences of no more supported Java option "MaxPermSize"
NXP-16479: Activate nuxeo-automation-scripting depending on Java 8